Fixes column wrap and converts all resources to card formatting

--- a/src/_sass/wp.scss
+++ b/src/_sass/wp.scss
@@ -1,3 +1,4 @@
+// Bootstrap card overrides: Projects
 
 .projects-h3 {
   margin-top: .8rem;
@@ -14,7 +15,6 @@
   margin-right:.5rem;
 }
 
-
 .projects img,
 .projects a img {
   border: 1px #dadada solid;
@@ -28,11 +28,15 @@
   padding: 0px;
 }
 
+// Bootstrap card overrides: Steering Committee Include
+
 .steeering-committee-image {
   margin: 0 3rem 0 0;
   height: 150px;
   width: 150px;
 }
+
+// Bootstrap card overrides: Calendar/Event cards
 
 .calendar-card {
   margin-bottom: 1rem;
@@ -52,6 +56,18 @@
   margin-top:.3rem;
   line-height:1.5rem;
 }
+
+// Bootstrap card overrides: Resource cards
+
+
+.resource-card-subtitle {
+    font-weight:normal;
+    font-style: italic;
+    font-size: 1rem;
+    margin-top: .8rem;
+  }
+
+// Bootstrap card overrides: Blog
 
 .shout-out-body {
   padding:0rem;
